# tuxlink-mcp-testserver — tier-2 harness: the REAL MCP router over a REAL UDS,
# wired to a REAL EgressGuard, with NO Tauri and NO full app build.
#
# Phase 3.1 Task 6: this is "the spike productionized." The agent runs
# `claude mcp add` against this standalone server on the Pi and calls
# `server_info` to confirm the MCP layer + UDS + (later) redaction + the gate
# behave end-to-end. It depends ONLY on the Pi-buildable tuxlink-mcp-core +
# tuxlink-security crates, never the Tauri monolith.
#
# The initial guard state is controllable from the environment so the tier-2
# round-trip can assert `server_info` reflects armed/tainted. See src/main.rs
# for the env-var contract.
[package]
name = "tuxlink-mcp-testserver"
version = "0.0.0"
edition = "2021"
rust-version = "1.75"
license = "GPL-3.0-or-later"
publish = false

[[bin]]
name = "tuxlink-mcp-testserver"
path = "src/main.rs"

[dependencies]
tuxlink-mcp-core = { path = "../tuxlink-mcp-core" }
tuxlink-security = { path = "../tuxlink-security" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "signal"] }
