[package]
name = "tuxlink-routines"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "AGPL-3.0-or-later"
publish = false
description = "Deterministic station automation engine (Routines) — Tauri-free leaf crate"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "time", "macros", "sync"] }
tokio-util = "0.7"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "time", "macros", "sync", "test-util"] }
tempfile = "3"
