[package]
name = "sonde-fec"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "LDPC forward error correction for sonde (clean-sheet HF modem). Two code families: a rate-1/4 short-block code for the wide-band low-density noise-floor PHY mode, and a rate-adaptive WiFi-style family (rates 1/2..5/6) for the bit-adaptive OFDM main family."
keywords = ["ldpc", "fec", "hf", "modem", "ham-radio"]
categories = ["algorithms", "encoding"]

[dependencies]
sonde-phy.workspace = true
bitvec.workspace = true
crc.workspace = true
rand.workspace = true
rand_chacha.workspace = true
thiserror.workspace = true

[dev-dependencies]
hf-channel-sim.workspace = true
proptest.workspace = true
criterion = { workspace = true, features = ["html_reports"] }

# [[bench]] targets are added in Phase 8 alongside benches/encode.rs and
# benches/decode.rs. Declaring them earlier breaks `cargo check`.
